--- a/main.html
+++ b/main.html
@@ -304,7 +304,7 @@
   </div>
   
   <header>
-    <h1>SSmartFem Infinity X</h1>
+    <h1>SmartFem Infinity X</h1>
     <p class="subtitle">Revolutionary Smart Menstrual Cup</p>
   </header>
   
