--- a/main.html
+++ b/main.html
@@ -494,7 +494,7 @@
   <button id="open-notepad-btn">Open Notepad</button>
   
   <footer>
-    <p>&copy; 2025 SSmartFem Infinity X. All rights reserved.by batman</p>
+    <p>&copy; 2025 SmartFem Infinity X. All rights reserved.by batman</p>
   </footer>
   
   <script>
